--- a/DDAYGO/ViewController/My/Supplier/Supplier1ViewController.xib
+++ b/DDAYGO/ViewController/My/Supplier/Supplier1ViewController.xib
@@ -81,6 +81,9 @@
                                 <state key="normal" title="提交訂單">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="SubmitBut:" destination="-1" eventType="touchUpInside" id="cuu-Y1-pvy"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
