商家申请界面
商家申请界面

--- a/DDAYGO/ViewController/My/Supplier/Supplier1ViewController.xib
+++ b/DDAYGO/ViewController/My/Supplier/Supplier1ViewController.xib
@@ -25,57 +25,54 @@
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <color key="separatorColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <view key="tableHeaderView" contentMode="scaleToFill" id="nnU-bl-JGv">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="31"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="臺灣" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xPu-zy-3JE">
-                                <rect key="frame" x="100" y="3" width="27" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="fLY-RA-T69"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="所在國家:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3CE-7I-b3S">
-                                <rect key="frame" x="38" y="3" width="57" height="25"/>
+                                <rect key="frame" x="38" y="8" width="57" height="25"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="OEQ-bf-BHc"/>
+                                    <constraint firstAttribute="height" constant="25" id="1Hv-QA-3r4"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_business_country" translatesAutoresizingMaskIntoConstraints="NO" id="eFj-cw-kDr">
-                                <rect key="frame" x="8" y="3" width="25" height="25"/>
+                                <rect key="frame" x="8" y="8" width="25" height="25"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="Fen-Yo-ryd"/>
-                                    <constraint firstAttribute="width" constant="25" id="ZYa-Aj-u3T"/>
+                                    <constraint firstAttribute="height" constant="25" id="SOx-q5-6fZ"/>
+                                    <constraint firstAttribute="width" constant="25" id="njT-nF-OSC"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="臺灣" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xPu-zy-3JE">
+                                <rect key="frame" x="100" y="8" width="27" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="2UH-ZE-JFj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="xPu-zy-3JE" firstAttribute="top" secondItem="nnU-bl-JGv" secondAttribute="top" constant="2.5" id="9Is-YA-guI"/>
-                            <constraint firstItem="eFj-cw-kDr" firstAttribute="top" secondItem="nnU-bl-JGv" secondAttribute="top" constant="2.5" id="Dvs-vr-PDM"/>
-                            <constraint firstAttribute="bottom" secondItem="eFj-cw-kDr" secondAttribute="bottom" constant="2.5" id="XKV-T5-nbB"/>
-                            <constraint firstItem="3CE-7I-b3S" firstAttribute="leading" secondItem="eFj-cw-kDr" secondAttribute="trailing" constant="5" id="dbY-bj-QUG"/>
-                            <constraint firstItem="3CE-7I-b3S" firstAttribute="top" secondItem="nnU-bl-JGv" secondAttribute="top" constant="2.5" id="etV-me-dMS"/>
-                            <constraint firstAttribute="bottom" secondItem="xPu-zy-3JE" secondAttribute="bottom" constant="2.5" id="h5H-V3-yaw"/>
-                            <constraint firstItem="xPu-zy-3JE" firstAttribute="leading" secondItem="3CE-7I-b3S" secondAttribute="trailing" constant="5" id="qL2-Kx-aIT"/>
-                            <constraint firstAttribute="bottom" secondItem="3CE-7I-b3S" secondAttribute="bottom" constant="2.5" id="qci-dh-7dt"/>
-                            <constraint firstItem="eFj-cw-kDr" firstAttribute="leading" secondItem="nnU-bl-JGv" secondAttribute="leading" constant="8" id="sCp-B8-QLF"/>
+                            <constraint firstItem="eFj-cw-kDr" firstAttribute="leading" secondItem="nnU-bl-JGv" secondAttribute="leading" constant="8" id="1TZ-cC-8gu"/>
+                            <constraint firstItem="3CE-7I-b3S" firstAttribute="leading" secondItem="eFj-cw-kDr" secondAttribute="trailing" constant="5" id="KVY-5O-Ecv"/>
+                            <constraint firstItem="xPu-zy-3JE" firstAttribute="top" secondItem="nnU-bl-JGv" secondAttribute="top" constant="8" id="Mo8-f4-Nqf"/>
+                            <constraint firstItem="3CE-7I-b3S" firstAttribute="top" secondItem="nnU-bl-JGv" secondAttribute="top" constant="8" id="hd9-La-VrS"/>
+                            <constraint firstItem="xPu-zy-3JE" firstAttribute="leading" secondItem="3CE-7I-b3S" secondAttribute="trailing" constant="5" id="sCr-up-fxa"/>
+                            <constraint firstItem="eFj-cw-kDr" firstAttribute="top" secondItem="nnU-bl-JGv" secondAttribute="top" constant="8" id="zYi-Ys-Vdi"/>
                         </constraints>
                     </view>
                     <view key="tableFooterView" contentMode="scaleToFill" id="beu-bw-ekq">
-                        <rect key="frame" x="0.0" y="859" width="320" height="82"/>
+                        <rect key="frame" x="0.0" y="868" width="320" height="82"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gKi-fL-09x">
-                                <rect key="frame" x="20" y="15" width="280" height="30"/>
+                                <rect key="frame" x="20" y="15" width="280" height="35"/>
                                 <color key="backgroundColor" red="0.9450041651725769" green="0.6729779839515686" blue="0.39233225584030151" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="b1l-2M-aFo"/>
+                                    <constraint firstAttribute="height" constant="35" id="b1l-2M-aFo"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <state key="normal" title="提交訂單">
